# dumbmoney

./: .gitignore  README.md  pyproject.toml  pytest.ini
examples/: basic.py
src/dumbmoney/: __init__.py  service.py  types.py
src/dumbmoney/charts/: __init__.py  base.py  mplfinance.py  plotly.py
src/dumbmoney/feeds/: __init__.py  akshare.py  feed.py  feed_service.py  massive.py  tushare.py
src/dumbmoney/indicators/: indicator.py  macd.py  moving_average.py  rsi.py
src/dumbmoney/plotting/: __init__.py  mplfinance.py  plotly.py  plotter.py
src/dumbmoney/plotting/adapters/: macd_adapter.py
src/dumbmoney/prices/: __init__.py  akshare.py  base.py  massive.py  service.py  tushare.py
src/dumbmoney/providers/: akshare.py  base.py  massive.py  tushare.py
tests/: __init__.py  test_backtests.py  test_charts.py  test_feeds.py  test_indicators.py  test_plotting.py  test_price_service.py  test_prices.py  test_strategies.py
tests/ohlcv_data/: AAPL_US.csv
